refactor: swiper index

--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -26,9 +26,13 @@
     &_selected
       color: #111;
       border-bottom: 4px solid;
-.photos
+.photos-swiper
   height: "calc(100vh - %s + 2px)" % tab-height
   margin-top: tab-height - 2px
+
+.photos
+  height: 100%
+
 
 .loading-status
   color: #888
