--- a/src/pages/detail/index.styl
+++ b/src/pages/detail/index.styl
@@ -67,14 +67,16 @@
     align-items: center
     height: 100%
 
-.icon-jiantou
-  margin-right: 15px
-  font-size: 50px
-
 .optional
   border-top: 4px solid #fff
   padding: 20px 0
   margin-top: 20px
+
+.icon-gengduo
+  font-size: 50px
+  margin-right: 15px
+  border: 15px solid transparent;
+
 
 page
   background-color: #111
