--- a/src/pages/detail/index.styl
+++ b/src/pages/detail/index.styl
@@ -37,7 +37,6 @@
     width: 64px;
     height: 64px;
     border: 4px solid #fff
-    margin-right: 10px;
     position: relative;
     display: inline-block;
     line-height: 1;
@@ -67,15 +66,19 @@
     align-items: center
     height: 100%
 
+  &-right
+    text-align: center
+    width: 64px
+    height: 64px
+
 .optional
   border-top: 4px solid #fff
   padding: 20px 0
   margin-top: 20px
 
 .icon-gengduo
-  font-size: 50px
-  margin-right: 15px
-  border: 15px solid transparent;
+  font-size: 55px
+  line-height: 55px
 
 
 page
