--- a/src/pages/detail/components/Poster/index.styl
+++ b/src/pages/detail/components/Poster/index.styl
@@ -12,9 +12,12 @@
     top: 50%
     left: 50%
     transform: translate(-50%,-50%)
-    background: #ffffff
-    border-radius: 10px
 
   &-canvas
     width: 100%
     height: 100%
+
+.canvas-container
+    background: #ffffff
+    box-sizing: border-box;
+    margin-bottom: 20px
