--- a/src/pages/detail/components/Poster/index.styl
+++ b/src/pages/detail/components/Poster/index.styl
@@ -6,6 +6,7 @@
   top: 0
   left: 0
   background-color: rgba(#000,0.7)
+  overflow: scroll
 
   &-modal
     position: absolute
@@ -18,6 +19,26 @@
     height: 100%
 
 .canvas-container
-    background: #ffffff
-    box-sizing: border-box;
-    margin-bottom: 20px
+  background: #ffffff
+  box-sizing: border-box;
+  margin-bottom: 20px
+
+.poster-opreation
+  position: fixed
+  right: 40px
+  bottom: 140px
+  width: 76px
+  height: 76px
+  border-radius: 50%
+  background: #36CA98
+  box-shadow: 0 4px 12px rgba(0,0,0,.08), 0 0 1px rgba(1,0,0,.1)
+  display:flex;
+  justify-content:center;
+  align-items:center;
+
+  .icon
+    width: 8px
+    height: 8px
+    background: white
+    border-radius: 50%
+    margin: 4px
