✨poster exif opitonal

--- a/src/pages/detail/components/Poster/index.styl
+++ b/src/pages/detail/components/Poster/index.styl
@@ -8,20 +8,16 @@
   background-color: rgba(#000,0.7)
   overflow: scroll
 
-  &-modal
+  &-canvas
     position: absolute
     top: 50%
     left: 50%
     transform: translate(-50%,-50%)
 
-  &-canvas
-    width: 100%
-    height: 100%
-
-.canvas-container
-  background: #ffffff
-  box-sizing: border-box;
-  margin-bottom: 20px
+// .canvas-container
+//   background: #ffffff
+//   box-sizing: border-box;
+//   margin-bottom: 20px
 
 .poster-opreation
   position: fixed
