✨ tab scroll into view

--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -18,7 +18,8 @@
   &-item
     padding: 0px 20px
     color: #999;
-    display: flex;
+    display: inline-flex;
+    box-sizing: border-box;
     height: 100%;
     align-items: center;
     transition: color .2s ease-in-out,opacity .2s ease-in-out;
