--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -1,14 +1,14 @@
 @import "../../stylesheets/index"
 
 .tabs
-  position: fixed
+  // position: fixed
   z-index: 1
   width: 100%
   background-color: rgba(#ffffff, 0.95)
   white-space: nowrap;
   overflow: scroll
   box-sizing: border-box
-  box-shadow: 0 4px 12px rgba(0,0,0,.08), 0 0 1px rgba(1,0,0,.1)
+  // box-shadow: 0 0 12px rgba(0,0,0,.08), 0 0 1px rgba(1,0,0,.1)
   height: tab-height
   display: flex
   top: 0
@@ -29,7 +29,7 @@
       border-bottom: 4px solid;
 .photos-swiper
   height: "calc(100vh - %s + 2px)" % tab-height
-  margin-top: tab-height - 2px
+  // margin-top: tab-height - 2px
 
 .photos
   height: 100%
@@ -41,3 +41,10 @@
   width: 100%
   padding: 30px 0
   padding-top: 0
+
+.titlebar-container
+  display: flex
+  align-items: center
+  .iconfont
+    margin-left: 28px
+    font-size: 45px
