--- a/src/pages/detail/components/Poster/index.styl
+++ b/src/pages/detail/components/Poster/index.styl
@@ -14,17 +14,12 @@
     left: 50%
     transform: translate(-50%,-50%)
 
-// .canvas-container
-//   background: #ffffff
-//   box-sizing: border-box;
-//   margin-bottom: 20px
-
 .poster-opreation
   position: fixed
-  right: 40px
-  bottom: 140px
-  width: 76px
-  height: 76px
+  right: 50px
+  bottom: 60px
+  width: 90px
+  height: 90px
   border-radius: 50%
   background: #36CA98
   box-shadow: 0 4px 12px rgba(0,0,0,.08), 0 0 1px rgba(1,0,0,.1)
@@ -33,8 +28,9 @@
   align-items:center;
 
   .icon
-    width: 8px
-    height: 8px
+    width: 10px
+    height: 10px
     background: white
     border-radius: 50%
+    display: inline-block
     margin: 4px
