--- a/src/app.styl
+++ b/src/app.styl
@@ -1,1 +1,14 @@
 @import './stylesheets/icon.styl'
+
+.full-page
+  height: 100vh;
+  overflow: hidden;
+  display: flex
+  flex-direction: column
+
+.flex-1
+  flex: 1
+  overflow: hidden
+
+.full-height
+  height: 100%
