✨center page base

--- a/src/components/Navbar/index.styl
+++ b/src/components/Navbar/index.styl
@@ -1,4 +1,7 @@
 .navbar
+  position:relative;
+  z-index:99;
+
   // position: fixed
   // top: 0
   // left: 0
@@ -19,3 +22,7 @@
     font-size: 45px
   .icon-fanhui
     margin-left: 20px
+    &.obvious
+      background: rgba(#fff,0.2);
+      border-radius:50%;
+
