--- a/src/pages/center/index.styl
+++ b/src/pages/center/index.styl
@@ -44,7 +44,7 @@ header-hegiht=420px
   transform: translate(-50%, -50%)
 
 .name
-  font-weight: bold
+  font-weight: 600
   font-size: 40px
   line-height: 50px
 
@@ -52,3 +52,26 @@ header-hegiht=420px
   font-size: 28px
   line-height: 1em
   margin-top: 20px
+
+.list
+  font-size: 56px
+  width: 90%
+  margin: auto
+  color: #333
+  font-weight: 350
+
+  &-item
+    margin-bottom: 40px
+    position: relative
+    text-indent: 0.8em
+
+    &:after
+      position: absolute;
+      content: "";
+      bottom: 0;
+      left: 0;
+      height: 20%;
+      width: 100%;
+      background: #214AE1;
+      opacity: 0.4;
+      z-index: -1;
