--- a/src/pages/center/index.styl
+++ b/src/pages/center/index.styl
@@ -66,12 +66,38 @@ header-hegiht=420px
     text-indent: 0.8em
 
     &:after
-      position: absolute;
-      content: "";
-      bottom: 0;
-      left: 0;
-      height: 20%;
-      width: 100%;
-      background: #214AE1;
-      opacity: 0.4;
-      z-index: -1;
+      position: absolute
+      content: ""
+      bottom: 0
+      left: 0
+      height: 25%
+      width: 100%
+      background: #214AE1
+      opacity: 0.4
+      z-index: -1
+
+.btn-feedback
+  border: none
+  border-width: 0
+  border-color: transparent
+  position: relative
+  display: inline
+  margin-left:auto
+  margin-right:auto
+  padding-left: 0
+  padding-right: 0
+  box-sizing: border-box
+  font-size: inherit
+  text-align: left
+  text-decoration: none
+  line-height: inherit
+  border-radius: 0
+  overflow:hidden
+  color: inherit
+  outline: none
+  background: none
+  background-color: transparent
+
+  &:after
+    border: none
+
