--- a/src/app.styl
+++ b/src/app.styl
@@ -1,14 +1,16 @@
 @import './stylesheets/icon.styl'
+@import './stylesheets/animate.styl'
 
 .full-page
   height: 100vh;
   overflow: hidden;
   display: flex
   flex-direction: column
+  position: relative
 
 .flex-1
   flex: 1
-  overflow: hidden
+  overflow: scroll
 
 .full-height
   height: 100%
