--- a/src/components/PhotoItem/PhotoItem.styl
+++ b/src/components/PhotoItem/PhotoItem.styl
@@ -4,6 +4,12 @@ tab-height = 100px
     position: relative
     width: 100%
     margin-bottom: 30px
+
+    // &-holder
+    //   position: absolute
+    //   width: 100%
+    //   top: 0
+    //   left: 0
     &-image
       position: absolute
       top: 0
