--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -34,9 +34,11 @@
 .photos
   height: 100%
 
-.titlebar-container
+.titlebar
   display: flex
   align-items: center
+  height: 100%
+  width: 100%
   .iconfont
     margin-left: 28px
     font-size: 45px
