--- a/src/components/Navbar/index.styl
+++ b/src/components/Navbar/index.styl
@@ -1,3 +1,5 @@
+@import '../../stylesheets/icon.styl'
+
 .navbar
   position:relative;
   z-index:99;
@@ -12,17 +14,26 @@
   align-items: center
   width: 100%
   height 100%
+  position: relative
 
   &-title
     width: 100%
     text-align: center
     display: block
+    height: 100%
+    display: flex
+    align-items: center
+    justify-content: center
+    position: absolute
+    z-index: -1
+    top: 0
+    left: 0
 
-  .iconfont
-    font-size: 45px
-  .icon-fanhui
-    margin-left: 20px
-    &.obvious
-      background: rgba(#fff,0.2);
-      border-radius:50%;
+.iconfont
+  font-size: 45px
+.icon-fanhui
+  margin-left: 20px
+  &.obvious
+    background: rgba(#fff,0.2);
+    border-radius:50%;
 
