--- a/src/pages/center/index.styl
+++ b/src/pages/center/index.styl
@@ -11,6 +11,11 @@ header-hegiht=420px
   background-repeat: no-repeat
   background-size: cover
 
+  &-mask
+    width: 100%
+    height: 100%
+    background-color: rgba(#fff,0.2)
+
 .body
   margin-top: header-hegiht
   position: absolute
@@ -19,12 +24,9 @@ header-hegiht=420px
   width: 100%
 
 .userinfo
-  background: #ffffff
-  box-shadow: 0px 10px 10px rgba(#000, 0.1)
   width: 90%
   top: 0
   transform: translateY(-50%)
-  position: absolute
   margin: auto
   background: #fff
   text-align: center
@@ -32,6 +34,8 @@ header-hegiht=420px
   padding-top: 120px
   padding-bottom: 36px
   position: relative
+  box-shadow: 0px 10px 10px rgba(#000, 0.1)
+  // background: red
 
 .avatar
   width: 160px
@@ -42,6 +46,7 @@ header-hegiht=420px
   border-radius: 50%
   position: absolute
   transform: translate(-50%, -50%)
+  box-shadow: 0px 10px 10px rgba(#000, 0.1)
 
 .name
   font-weight: 600
@@ -58,10 +63,10 @@ header-hegiht=420px
   width: 90%
   margin: auto
   color: #333
-  font-weight: 350
+  font-weight: 300
 
   &-item
-    margin-bottom: 40px
+    margin-bottom: 60px
     position: relative
     text-indent: 0.8em
 
@@ -101,3 +106,12 @@ header-hegiht=420px
   &:after
     border: none
 
+// .drop-shadow
+//   bottom: 0;
+//   box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+//   filter: blur(6px);
+//   height: 94%;
+//   left: 3%;
+//   position: relative;
+//   width: 94%;
+//   z-index: -1;
