feat: add artist page

--- a/src/app.styl
+++ b/src/app.styl
@@ -1,5 +1,6 @@
 @import './stylesheets/icon.styl'
 @import './stylesheets/animate.styl'
+@import './fonts/font.styl'
 
 .full-page
   height: 100vh;
@@ -7,10 +8,11 @@
   display: flex
   flex-direction: column
   position: relative
+  font-family: CircularPro, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 
 .flex-1
   flex: 1
-  overflow: scroll
+  overflow: hidden
 
 .full-height
   height: 100%
