--- a/src/app.styl
+++ b/src/app.styl
@@ -2,13 +2,19 @@
 @import './stylesheets/animate.styl'
 @import './fonts/font.styl'
 
+page
+  font-family: CircularPro, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+
+
 .full-page
   height: 100vh;
   overflow: hidden;
   display: flex
   flex-direction: column
   position: relative
-  font-family: CircularPro, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+
+scroll-view::-webkit-scrollbar
+  display: none;
 
 .flex-1
   flex: 1
