--- a/src/pages/detail/index.styl
+++ b/src/pages/detail/index.styl
@@ -57,7 +57,7 @@
     margin-top: 8px
 
 .social
-  padding-bottom: 10px
+  margin-bottom: 16px
   align-items: flex-end
   // font-weight:
   .count
@@ -74,7 +74,6 @@
   &-right
     text-align: center
     width: 64px
-    height: 64px
 
 .optional
   border-top: 4px solid #fff
