--- a/src/app.styl
+++ b/src/app.styl
@@ -1,9 +1,9 @@
 @import './stylesheets/icon.styl'
 @import './stylesheets/animate.styl'
-@import './fonts/font.styl'
+@import './assets/fonts/font.styl'
 
 page
-  font-family: CircularPro, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  font-family: CircularPro
 
 
 .full-page
